--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,10 +8,9 @@ services:
       - ./:/usr/src/app
     working_dir: /usr/src/app
     command: npm run server
+    env_file: .env.local
     environment:
-      ALLOW_ORIGIN: http://192.168.4.4:3003
       BROWSER: none
-      LANGUAGES: en de ru
       NODE_ENV: development # [ development | production ]
       PGUSER: postgres
       PGHOST: db
@@ -19,7 +18,6 @@ services:
       PGDATABASE: intl
       PGPORT: 5432
       PORT: 3000
-      TZ: Europe/Moscow
     ports:
       - 3004:3000
 
@@ -38,13 +36,11 @@ services:
       - ./:/usr/src/app
     working_dir: /usr/src/app
     command: npm run start
+    env_file: .env.local
     environment: 
       BROWSER: none
-      LANGUAGES: en de ru
       NODE_ENV: development # [ development | production ]
       PORT: 3000
-      REACT_APP_API_URL: http://192.168.4.4:3004
-      TZ: Europe/Moscow
     ports:
       - 3003:3000
 
