--- a/env.example
+++ b/env.example
@@ -1,4 +1,22 @@
-ALLOW_ORIGIN=http://192.168.0.2:3003
-LANGUAGES="en ch de fr ru"
-REACT_APP_API_URL=http://192.168.0.2:3004
+# Copy this file to .env.local then change ip and other you need
+
+# ALLOW_ORIGIN is for 'server' and allows it to
+# communicate with 'dev-server'
+ALLOW_ORIGIN=http://192.168.0.2:3001
+
+# create-react-app no need to start any browser within
+# the docker container 😉
+BROWSER=none
+
+# LANGUAGES is all languages you need to translate
+LANGUAGES=en de ru
+
+# PORT may be the same for all containers
+PORT=3000
+
+# REACT_APP_API_URL is for 'dev-server'
+# REACT_APP_API_URL must to point to 'server' service port
+REACT_APP_API_URL=http://192.168.0.2:3000
+
+# timezone
 TZ=Europe/Moscow
