--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "classnames": "^2.2.5",
     "cors": "^2.8.4",
     "fastify": "^0.30.2",
+    "fastify-static": "^0.3.0",
     "nodemon": "^1.12.1",
     "passport": "^0.4.0",
     "pg": "^7.3.0",
@@ -22,6 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
+    "api": "nodemon ./src/server.js",
     "server": "nodemon ./src/server.js"
   }
 }
