--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "irec-intl",
-  "version": "0.6.0",
-  "private": true,
+  "name": "i18n-service",
+  "version": "0.7.0",
   "dependencies": {
     "classnames": "^2.2.5",
     "cors": "^2.8.4",
