Changed message id type (changed to string)

--- a/env.example
+++ b/env.example
@@ -1,7 +1,7 @@
 # Copy this file to .env.local then change ip and other you need
 
 # ALLOW_ORIGIN is for 'server' and allows it to
-# communicate with 'dev-server'
+# communicate with your taget service and with 'dev-server'
 ALLOW_ORIGIN=http://192.168.0.2:3001
 
 # create-react-app no need to start any browser within
